--- a/src/main/resources/templates/fragments/lesson-form-create.html
+++ b/src/main/resources/templates/fragments/lesson-form-create.html
@@ -7,14 +7,14 @@
               th:object="${createLesson}"
               method="post"
         >
-            <input type="hidden" th:field="*{lessonId}" />
-            <input type="hidden" th:field="*{groupUniId}" />
-            <input type="hidden" th:field="*{assignmentId}" />
+            <input type="hidden" id="create-lesson" th:field="*{lessonId}" />
+            <input type="hidden" id="create-group"  th:field="*{groupUniId}" />
+            <input type="hidden" id="create-ass" th:field="*{assignmentId}" />
 
             <div class="form-group">
-                <label th:for="subjectId">Subject</label>
-                <select  th:field="*{subjectId}" required>
-                    <option value="" disabled >choose subject</option>
+                <label th:for="crete-subject">Subject</label>
+                <select  id="create-subject" th:field="*{subjectId}" required>
+                    <option th:value="${null}" disabled selected >choose subject</option>
                     <th:block th:each="subject : ${subjects}">
                         <option th:value="${subject.id}" th:text="${subject.name}"></option>
                     </th:block>
@@ -22,8 +22,8 @@
             </div>
 
             <div class="form-group">
-                <label th:for="teacherId">Teacher</label>
-                <select name="teacherId" th:field="*{teacherId}"  required>
+                <label th:for="create-teacher">Teacher</label>
+                <select id="create-teacher" th:field="*{teacherId}"  required>
                     <option value="" disabled selected>choose teacher</option>
                     <th:block th:each="teacher : ${teachers}">
                         <option th:value="${teacher.id}" th:text="${teacher.getFullName}"></option>
@@ -32,8 +32,8 @@
             </div>
 
             <div class="form-group">
-                <label th:for="dayOfWeek">Day of Week</label>
-                <select th:field="*{dayOfWeek}" required>
+                <label th:for="create-dayOfWeek">Day of Week</label>
+                <select id="create-dayOfWeek" th:field="*{dayOfWeek}" required>
                     <option value="" disabled selected>choose dayOfWeek</option>
                     <th:block th:each="dayOfTheWeek : ${daysOfWeek}">
                         <option th:value="${dayOfTheWeek}" th:text="${dayOfTheWeek}"></option>
@@ -42,8 +42,8 @@
             </div>
 
             <div class="form-group">
-                <label th:for="startTime">Start Time</label>
-                <select  th:field="*{startTime}" required>
+                <label th:for="create-startTime">Start Time</label>
+                <select id="create-startTime"  th:field="*{startTime}" required>
                     <option value="" disabled selected>Choose time</option>
                     <th:block th:each="timeslot : ${timeSlots}">
                         <option th:value="${timeslot}"
@@ -53,8 +53,8 @@
             </div>
 
             <div class="form-group">
-                <label th:for="classroomId">Classroom</label>
-                <select  th:field="*{classroomId}" required>
+                <label th:for="create-class">Classroom</label>
+                <select id="create-class"  th:field="*{classroomId}" required>
                     <option value="" disabled selected >choose Classroom</option>
                     <th:block th:each="classroom : ${classrooms}">
                         <option th:value="${classroom.id}" th:text="${classroom.roomNumber}"></option>
@@ -63,14 +63,14 @@
             </div>
 
             <div class="form-group">
-                <label th:for="typesOfLecture">Type</label>
-                <select th:field="*{typeOfLecture}" required>
+                <label th:for="create-type">Type</label>
+                <select id="create-type" th:field="*{typeOfLecture}" required>
                     <option value="" disabled selected >Choose type</option>
                     <th:block th:each="typeOfLecture : ${typesOfLecture}">
                         <option th:value="${typeOfLecture}" th:text="${typeOfLecture}"></option>
                     </th:block>
                 </select>
-                <button type="submit">Update</button>
+                <button class="submit" type="submit">Create</button>
             </div>
 
 
